force-app/main/default/objects/SecurityKey__mdt/SecurityKey__mdt.object-meta.xml
<CustomObject>
    <description>Secure keys which are used to encryt and decrypt the data across the organization</description>
    <label>SecurityKey</label>
    <pluralLabel>SecurityKeys</pluralLabel>
</CustomObject>