force-app/main/default/objects/SecurityKey__mdt/fields/EncryptionType__c.field-meta.xml
<CustomField>
    <fullName>EncryptionType__c</fullName>
    <description>Type of encryption Used</description>
    <inlineHelpText>Type of encryption Used</inlineHelpText>
    <label>Encryption Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>