force-app/main/default/objects/SecurityKey__mdt/fields/PrimaryInitializationVector__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInitializationVector__c</fullName>
    <description>Primary Initialization Vector used for encryption</description>
    <inlineHelpText
  >Primary Initialization Vector used for encryption</inlineHelpText>
    <label>Primary Initialization Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>