force-app/main/default/objects/SecurityKey__mdt/fields/PrimarySecretKey__c.field-meta.xml
<CustomField>
    <fullName>PrimarySecretKey__c</fullName>
    <description>Primary Encryption Key</description>
    <inlineHelpText>Primary Encryption Key</inlineHelpText>
    <label>Primary Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>