force-app/main/default/objects/SecurityKey__mdt/fields/SecondaryInitializationVector__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInitializationVector__c</fullName>
    <description
  >Secondary Initialization Vector used for encryption</description>
    <inlineHelpText
  >Secondary Initialization Vector used for encryption</inlineHelpText>
    <label>Secondary Initialization Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>