force-app/main/default/objects/SecurityKey__mdt/fields/SecondarySecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecondarySecretKey__c</fullName>
    <description>Secondary Secret Key used for encryption</description>
    <inlineHelpText>Secondary Secret Key used for encryption</inlineHelpText>
    <label>Secondary Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>