force-app/main/default/objects/SecurityKey__mdt/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <description>Where Record has utilized</description>
    <inlineHelpText>Where Record has utilized</inlineHelpText>
    <label>Used</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>